更新首頁，增加貼心複製小功能

--- a/plugins_att.html
+++ b/plugins_att.html
@@ -58,31 +58,51 @@
             <!-- 文章內容 -->
             <div class="col-md-8 col-lg-9 my-sm-5 px-5 imagebig">
                 <div class="commonFormat mt-5" id="combo">
-                    <h6 class="fs-4">XIV Combo Plugin</h6>
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">XIV Combo Plugin</h6>
+                        <a href="https://github.com/attickdoor/XivComboPlugin" class="btn btn-outline-secondary"
+                            role="button">插件原網址</a>
+                    </div>
                     <p>讓連續的技能放在同一個技能欄中，改成combo模式<br>
                     職業分開設定，可自行勾選哪個技能要使用這個效果<br>
                     例如Draw on Play可以讓抽牌跟發牌使用同一個按鍵，快捷欄圖案會變成5抽牌的圖案。</p>
                     <img src="image/xl setting 06.jpg" alt="" class="img-fluid imagebigback">
                 </div>
                 <div class="commonFormat mt-5" id="BigPlayerDebuffs">
-                    <h6 class="fs-4">BigPlayerDebuffs</h6>
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">BigPlayerDebuffs</h6>
+                        <a href="https://github.com/rgd87/BigPlayerDebuffs" class="btn btn-outline-secondary"
+                            role="button">插件原網址</a>
+                    </div>
                     <p>讓自己的Debuff變超大</p>
                     <img src="https://github.com/rgd87/BigPlayerDebuffs/blob/master/images/image1.png?raw=true" alt=""
                         class="img-fluid imagebigback">
                 </div>
                 <div class="commonFormat mt-5" id="RezPls">
-                    <h6 class="fs-4">RezPls</h6>
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">RezPls</h6>
+                        <a href="https://github.com/Ottermandias/RezPls" class="btn btn-outline-secondary"
+                            role="button">插件原網址</a>
+                    </div>
                     <p>能夠顯示地上屍體誰正在拉或已經被拉起</p>
                     <img src="image/rez01.jpg" alt="" class="img-fluid imagebigback">
                 </div>
                 <div class="commonFormat mt-5" id="Waymark">
-                    <h6 class="fs-4">WaymarkPresetPlugin</h6>
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">WaymarkPresetPlugin</h6>
+                        <a href="https://github.com/PunishedPineapple/WaymarkPresetPlugin" class="btn btn-outline-secondary"
+                            role="button">插件原網址</a>
+                    </div>
                     <p>解除場地標點只能儲存五個的限制<br>
                     "/pwaymark"呼叫標點儲存視窗</p>
                     <img src="image/pwaymark.jpg" alt="" class="img-fluid imagebigback">
                 </div>
                 <div class="commonFormat mt-5" id="GentleTouch">
-                    <h6 class="fs-4">GentleTouch</h6>
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">GentleTouch</h6>
+                        <a href="https://github.com/fitzchivalrik/gentletouch" class="btn btn-outline-secondary"
+                            role="button">插件原網址</a>
+                    </div>
                     <p>手把震動功能<br>
                     可以設定技能CD好、靠近以太風流時震動</p>
                 </div>
