--- a/plugins_cup.html
+++ b/plugins_cup.html
@@ -54,7 +54,11 @@
             <!-- 文章內容 -->
             <div class="col-md-8 col-lg-9 my-sm-5 px-5 imagebig">
                 <div class="commonFormat mt-5" id="sonar">
-                    <h6 class="fs-4">Sonar</h6>
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">Sonar</h6>
+                        <a href="https://discord.com/invite/K7y24Rr" class="btn btn-outline-secondary"
+                            role="button">Discord</a>
+                    </div>
                     <p>提示玩家回報的S/A怪物狩獵，支持FATE回報，並且可設定接收整個大區的通知還是當前的伺服器<br>
                     ▶可選擇收到指定FATE通知
                     </p>
@@ -69,7 +73,11 @@
                         ▶在當前伺服器的話直接點視窗內要打的怪即可傳送</P>
                 </div>
                 <div class="commonFormat mt-5" id="TriadBuddy">
-                    <h6 class="fs-4">Triad Buddy</h6>
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">Triad Buddy</h6>
+                        <a href="https://github.com/MgAl2O4/FFTriadBuddyDalamud" class="btn btn-outline-secondary"
+                            role="button">插件原網址</a>
+                    </div>
                     <p>幻卡小抄</p>
                     <img src="https://github.com/MgAl2O4/FFTriadBuddyDalamud/raw/main/assets/image1.png" alt="" class="img-fluid imagebigback">
                     <P>告訴你下一步該何去何從</P>
@@ -79,7 +87,11 @@
                     <P>告訴你卡片要去哪裡拿，點選按鈕幫你插旗</P>
                 </div>
                 <div class="commonFormat mt-5" id="Tourist">
-                    <h6 class="fs-4">Tourist</h6>
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">Tourist</h6>
+                        <a href="https://git.annaclemens.io/ascclemens/Tourist" class="btn btn-outline-secondary"
+                            role="button">插件原網址</a>
+                    </div>
                     <p>探索筆記解答+插旗</p>
                 </div>
             </div>
