--- a/plugins_song.html
+++ b/plugins_song.html
@@ -5,11 +5,11 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-4GK80CEHHB"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-    gtag('config', 'G-4GK80CEHHB');
+        gtag('config', 'G-4GK80CEHHB');
     </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -54,82 +54,134 @@
             <!-- 文章內容 -->
             <div class="col-md-8 col-lg-9 my-sm-5 px-5 imagebig">
                 <div class="commonFormat mt-5" id="simpleTweaks">
-                    <h6 class="fs-4">Simple Tweaks</h6>
-                    <p>便利小插件合集，<a href="https://github.com/Caraxi/SimpleTweaksPlugin">部分使用說明(插件網址)</a></p>
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">Simple Tweaks</h6>
+                        <a href="https://github.com/Caraxi/SimpleTweaksPlugin" class="btn btn-outline-secondary"
+                            role="button">插件原網址</a>
+                    </div>
+                    <p>便利小插件合集，<a href="https://github.com/Caraxi/SimpleTweaksPlugin">部分使用說明(插件網址)</a>，幾個個人認為比較實用的</p>
+                    <ul>
+                        <li>增加試穿畫面縮放程度</li>
+                        <li>副本結束自動打開點讚畫面</li>
+                        <li>生產系技能放同個位置</li>
+                        <li>聊天中的網址可點擊</li>
+                        <li>滑鼠懸停可直接複製物品名稱</li>
+                        <li>滑步提示</li>
+                        <li>精簡伺服器選單</li>
+                        <li>顯示經驗百分比</li>
+                    </ul>
+
 
                     <div class="row">
                         <div class="col-md-6 text-center">
                             <a href="image/tweak01.jpg" target="_blank">
-                            <img src="image/tweak01.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
+                                <img src="image/tweak01.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
                         </div>
                         <div class="col-md-6 text-center">
                             <a href="image/tweak02.jpg" target="_blank">
-                            <img src="image/tweak02.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
+                                <img src="image/tweak02.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
                         </div>
                         <div class="col-md-6 text-center">
                             <a href="image/tweak03.jpg" target="_blank">
-                            <img src="image/tweak03.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
+                                <img src="image/tweak03.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
                         </div>
                         <div class="col-md-6 text-center">
                             <a href="image/tweak07.jpg" target="_blank">
-                            <img src="image/tweak07.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
+                                <img src="image/tweak07.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
                         </div>
                         <div class="col-md-6 text-center">
                             <a href="image/tweak04.jpg" target="_blank">
-                            <img src="image/tweak04.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
+                                <img src="image/tweak04.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
                         </div>
                         <div class="col-md-6 text-center">
                             <a href="image/tweak05.jpg" target="_blank">
-                            <img src="image/tweak05.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
+                                <img src="image/tweak05.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
                         </div>
                         <div class="col-md-6 text-center">
                             <a href="image/tweak06.jpg" target="_blank">
-                            <img src="image/tweak06.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
+                                <img src="image/tweak06.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
                         </div>
                     </div>
                 </div>
                 <div class="commonFormat mt-5" id="ezFauxHollows">
-                    <h6 class="fs-4">ezFauxHollows</h6>
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">ezFauxHollows</h6>
+                        <a href="https://github.com/daemitus/FauxHollowsSolver" class="btn btn-outline-secondary"
+                            role="button">插件原網址</a>
+                    </div>
                     <p>幻想盤翻牌子提示</p>
-                    <img src="https://github.com/daemitus/FauxHollowsSolver/raw/master/res/demo.png" alt="" class="img-fluid imagebigback">
+                    <img src="https://github.com/daemitus/FauxHollowsSolver/raw/master/res/demo.png" alt=""
+                        class="img-fluid imagebigback">
                 </div>
                 <div class="commonFormat mt-5" id="ezMiniCactpot">
-                    <h6 class="fs-4">ezMiniCactpot</h6>
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">ezMiniCactpot</h6>
+                        <a href="https://github.com/daemitus/MiniCactpotSolver" class="btn btn-outline-secondary"
+                            role="button">插件原網址</a>
+                    </div>
                     <p>金蝶刮刮樂明牌，但還是要看運氣，人雖起來連個789都沒有</p>
                     <div class="row">
-                        <img src="https://github.com/daemitus/MiniCactpotSolver/raw/master/res/demo_tiles.png" alt="" class="img-fluid col-md-6 imagebigback">
-                        <img src="https://github.com/daemitus/MiniCactpotSolver/raw/master/res/demo_lines.png" alt="" class="img-fluid col-md-6 imagebigback">
+                        <img src="https://github.com/daemitus/MiniCactpotSolver/raw/master/res/demo_tiles.png" alt=""
+                            class="img-fluid col-md-6 imagebigback">
+                        <img src="https://github.com/daemitus/MiniCactpotSolver/raw/master/res/demo_lines.png" alt=""
+                            class="img-fluid col-md-6 imagebigback">
                     </div>
                 </div>
                 <div class="commonFormat mt-5" id="ezWondrousTails">
-                    <h6 class="fs-4">ezWondrousTails</h6>
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">ezWondrousTails</h6>
+                        <a href="https://github.com/daemitus/WondrousTailsSolver" class="btn btn-outline-secondary"
+                            role="button">插件原網址</a>
+                    </div>
                     <p>空想帳機率提示</p>
-                    <img src="https://github.com/daemitus/WondrousTailsSolver/raw/master/res/demo.png" alt="" class="img-fluid imagebigback">
+                    <img src="https://github.com/daemitus/WondrousTailsSolver/raw/master/res/demo.png" alt=""
+                        class="img-fluid imagebigback">
                 </div>
 
                 <div class="commonFormat mt-5" id="market">
-                    <h6 class="fs-4">Market Board plugin</h6>
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">Market Board plugin</h6>
+                        <a href="https://github.com/fmauNeko/MarketBoardPlugin" class="btn btn-outline-secondary"
+                            role="button">插件原網址</a>
+                    </div>
                     <p>查詢物品價格，但需要玩家有打開板子更新價格，準確度取決於伺服器使用Dalamud的人數<br>
-                    "/pmb"打開查價介面，滑鼠移到物品上即可查詢價格</p>
+                        "/pmb"打開查價介面，滑鼠移到物品上即可查詢價格</p>
                     <img src="image/xl setting 05.jpg" alt="" class="img-fluid imagebigback">
                 </div>
                 <div class="commonFormat mt-5" id="Housemate">
-                    <h6 class="fs-4">Housemate</h6>
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">Housemate</h6>
+                        <a href="https://github.com/lmcintyre/Housemate" class="btn btn-outline-secondary"
+                            role="button">插件原網址</a>
+                    </div>
                     <p>顯示室內外裝修道具的名字</p>
                     <a href="image/xl setting 12.png" target="_blank">
-                    <img src="image/xl setting 12.png" alt="" class="img-fluid imagebigback"></a>
+                        <img src="image/xl setting 12.png" alt="" class="img-fluid imagebigback"></a>
                 </div>
                 <div class="commonFormat mt-5" id="BDTH">
-                    <h6 class="fs-4">BDTHPlugin</h6>
-                    <p>自訂家具位置，此插件需從第三方插件庫加載，詳細請見<a href="index.html#headingThree" target="_blank" class="moreplugin">安裝方法</a>
-                    <br>
-                    使用方式參照<a href="https://bbs.tggfl.com/topic/54/burning-down-the-house" target="_blank">獺爹教學</a>
-                    <br>
-                    進入旋轉模式，選中某家具，調整坐標。<br>
-                    調整後確認位置，不需要在旋轉模式微調家具。<br>
-                    請在進入房屋前啟用插件，否則請退出後重新進入一下。</p>
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">BDTHPlugin</h6>
+                        <a href="https://github.com/LeonBlade/DalamudPlugins" class="btn btn-outline-secondary"
+                            role="button">插件原網址</a>
+                    </div>
+                    <p>自訂家具位置，此插件需從第三方插件庫加載，詳細請見<a href="index.html#headingThree" target="_blank"
+                            class="moreplugin">安裝方法</a>
+                    </p>
+                    <label for="basic-url" class="form-label">第三方插件庫URL</label>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" value="https://raw.githubusercontent.com/LeonBlade/DalamudPlugins/main/repo.json" id="myInput" aria-describedby="basic-addon2">
+                        <button onclick="myFunction()"  class="input-group-text " id="basic-addon2">複製</button>
+                      </div>
+                    <p>使用方式參照<a href="https://bbs.tggfl.com/topic/54/burning-down-the-house" target="_blank">獺爹教學</a>
+                        <br>
+                        進入旋轉模式，選中某家具，調整坐標。<br>
+                        調整後確認位置，不需要在旋轉模式微調家具。<br>
+                        請在進入房屋前啟用插件，否則請退出後重新進入一下。
+                    </p>
+
                     <a href="image/xl setting 12.png" target="_blank">
-                    <img src="https://camo.githubusercontent.com/a6b2506f0ffa053c7807feed4ecf4e2f368b5fc30ec5815d56e6e37085ce18af/68747470733a2f2f692e696d6775722e636f6d2f41647a6e55794a2e706e67" alt="" class="img-fluid imagebigback"></a>
+                        <img src="https://camo.githubusercontent.com/a6b2506f0ffa053c7807feed4ecf4e2f368b5fc30ec5815d56e6e37085ce18af/68747470733a2f2f692e696d6775722e636f6d2f41647a6e55794a2e706e67"
+                            alt="" class="img-fluid imagebigback"></a>
                 </div>
             </div>
         </div>
