--- a/plugins_ui.html
+++ b/plugins_ui.html
@@ -57,23 +57,39 @@
             <!-- 文章內容 -->
             <div class="col-md-8 col-lg-9 my-sm-5 px-5 imagebig">
                 <div class="commonFormat mt-5" id="chatBubbles">
-                    <h6 class="fs-4">Chat Bubbles</h6>
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">Chat Bubbles</h6>
+                        <a href="https://github.com/Haplo064/ChatBubbles" class="btn btn-outline-secondary"
+                            role="button">插件原網址</a>
+                    </div>
                     <p>顯示玩家說話時頭頂的泡泡，也可用於RP店分辨誰在說話，設定可隱藏自己的泡泡跟決定顯示的方式</p>
                     <img src="https://github.com/Haplo064/ChatBubbles/blob/main/ChatBubbles/images/image1.png?raw=true"
                         alt="" class="img-fluid imagebigback">
                 </div>
                 <div class="commonFormat mt-5" id="Visibility">
-                    <h6 class="fs-4">Visibility</h6>
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">Visibility</h6>
+                        <a href="https://github.com/SheepGoMeh/VisibilityPlugin" class="btn btn-outline-secondary"
+                            role="button">插件原網址</a>
+                    </div>
                     <p>取消顯示其他玩家、寵物、召喚獸或路型鳥(有中文介面)<br>
                     "/pvis"呼叫設定介面</p>
                     <img src="image/xl setting 03.jpg" alt="" class="img-fluid imagebigback">
                 </div>
                 <div class="commonFormat mt-5" id="Glamaholic">
-                    <h6 class="fs-4">Glamaholic</h6>
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">Glamaholic</h6>
+                        <a href="https://git.annaclemens.io/ascclemens/Glamaholic" class="btn btn-outline-secondary"
+                            role="button">插件原網址</a>
+                    </div>
                     <p>解放投影模板數量限制</p>
                 </div>
                 <div class="commonFormat mt-5" id="GoodMemory">
-                    <h6 class="fs-4">GoodMemory</h6>
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">GoodMemory</h6>
+                        <a href="https://git.annaclemens.io/ascclemens/GoodMemory" class="btn btn-outline-secondary"
+                            role="button">插件原網址</a>
+                    </div>
                     <p>在物品底部區域標註是否已解鎖，只會出現在如樂譜、寵物等可以解鎖物品中。</p>
                     <img src="image/xl setting 04.jpg" alt="" class="img-fluid imagebigback">
                 </div>
