--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-4GK80CEHHB"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-    gtag('config', 'G-4GK80CEHHB');
+        gtag('config', 'G-4GK80CEHHB');
     </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -52,20 +52,20 @@
     <!-- 內容 -->
     <div class="container-fluid">
         <div class="row">
-            <div class="px-4 pt-5 my-5 text-center indexbanner">
+            <div class="px-4 pt-5 mt-5 text-center indexbanner">
                 <h1 class="display-4 mt-5 fw-bold">Dalamud</h1>
                 <div class="col-lg-8 mx-auto">
                     <p class="lead mb-4">所有插件的基底，功能包含快速啟動與更新、第三方插件管理、記憶多組帳號密碼、上傳交易板價格資料至Universalis等多項功能</p>
                     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-2">
                         <div class="btnfather">
-                        <a type="button" class="btn btn-primary btn-lg px-4 downloadbtn"
-                            href="https://github.com/goatcorp/FFXIVQuickLauncher/releases"
-                            target="_blank">下載Dalamud(github)</a>
+                            <a type="button" class="btn btn-primary btn-lg px-4 downloadbtn"
+                                href="https://github.com/goatcorp/FFXIVQuickLauncher/releases"
+                                target="_blank">下載Dalamud(github)</a>
                         </div>
                         <div class="btnfather">
-                        <a type="button" class="btn btn btn-secondary btn-lg px-4 downloadbtn cn"
-                            href="https://bbs.tggfl.com/topic/32/dalamud-%E5%8D%AB%E6%9C%88%E6%A1%86%E6%9E%B6"
-                            target="_blank">CN版介紹</a>
+                            <a type="button" class="btn btn-secondary btn-lg px-4 downloadbtn cn"
+                                href="https://bbs.tggfl.com/topic/32/dalamud-%E5%8D%AB%E6%9C%88%E6%A1%86%E6%9E%B6"
+                                target="_blank">CN版介紹</a>
                         </div>
                     </div>
                     <div class="alert alert alert-light mb-4" role="alert">
@@ -84,8 +84,84 @@
                         loading="lazy">
                 </div>
             </div>
+            <!-- 功能介紹卡片 -->
+            <div class="row mx-auto col-lg-10 justify-content-between py-5">
 
-            <div class="accordion col-lg-10 mx-auto pb-5" id="accordionExample" data-aos="fade-up">
+                <div class="card col-md-2 shadow-sm" data-aos="flip-left"
+                >
+                    <i class="bi bi-menu-button-wide-fill text-center mt-3 fs-1"></i>
+                    <div class="card-header">
+                        <h5 class="card-title my-2">UI優化</h5>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><a href="plugins_ui.html#chatBubbles">顯示頭頂氣泡</a></li>
+                        <li class="list-group-item"><a href="plugins_ui.html#Visibility">隱藏其他玩家</a></li>
+                        <li class="list-group-item"><a href="plugins_ui.html#Glamaholic">解放投影模板</a></li>
+                        <li class="list-group-item"><a href="plugins_ui.html#GoodMemory">物品解鎖備註</a></li>
+                    </ul>
+                </div>
+
+                <div class="card col-md-2 shadow-sm"
+                data-aos="flip-left"
+                data-aos-delay="100">
+                    <i class="bi bi-shield-shaded text-center mt-3 fs-1"></i>
+                    <div class="card-header">
+                        <h5 class="card-title my-2">戰鬥輔助</h5>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><a href="plugins_att.html#combo">技能Combo</a></li>
+                        <li class="list-group-item"><a href="plugins_att.html#BigPlayerDebuffs">放大自己dot</a></li>
+                        <li class="list-group-item"><a href="plugins_att.html#RezPls">屍體有誰拉</a></li>
+                        <li class="list-group-item"><a href="plugins_att.html#Waymark">標點儲存</a></li>
+                        <li class="list-group-item"><a href="plugins_att.html#GentleTouch">手把震動</a></li>
+                    </ul>
+                </div>
+                <div class="card col-md-2 shadow-sm"
+                data-aos="flip-left"
+                data-aos-delay="200">
+                    <i class="bi bi-ui-checks text-center mt-3 fs-1"></i>
+                    <div class="card-header">
+                        <h5 class="card-title my-2">改善遊戲體驗</h5>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><a href="plugins_song.html#simpleTweaks">實用設定合集</a></li>
+                        <li class="list-group-item"><a href="plugins_song.html#ezFauxHollows">幻想盤、刮刮樂明牌</a></li>
+                        <li class="list-group-item"><a href="plugins_song.html#ezWondrousTails">空想帳機率計算</a></li>
+                        <li class="list-group-item"><a href="plugins_song.html#market">交易版查價</a></li>
+                        <li class="list-group-item"><a href="plugins_song.html#Housemate">顯示家具名稱</a></li>
+                        <li class="list-group-item"><a href="plugins_song.html#BDTH">自訂家具位置</a></li>
+                    </ul>
+                </div>
+                <div class="card col-md-2 shadow-sm"
+                data-aos="flip-left"
+                data-aos-delay="300">
+                    <i class="bi bi-pin-map-fill text-center mt-3 fs-1"></i>
+                    <div class="card-header">
+                        <h5 class="card-title my-2">地圖輔助</h5>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><a href="plugins_map.html#ChatCoordinates">指令插旗</a></li>
+                        <li class="list-group-item"><a href="plugins_map.html#Globetrotter">找寶洞</a></li>
+                        <li class="list-group-item"><a href="plugins_map.html#MapLinker">紀錄講過的座標</a></li>
+                        <li class="list-group-item"><a href="plugins_map.html#Teleporter">座標傳送</a></li>
+                    </ul>
+                </div>
+                <div class="card col-md-2 shadow-sm"
+                data-aos="flip-left"
+                data-aos-delay="400">
+                    <i class="bi bi-trophy-fill text-center mt-3 fs-1"></i>
+                    <div class="card-header">
+                        <h5 class="card-title my-2">成就懶人</h5>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><a href="plugins_cup.html#sonar">找S/A怪</a></li>
+                        <li class="list-group-item"><a href="plugins_cup.html#TriadBuddy">幻卡小抄</a></li>
+                        <li class="list-group-item"><a href="plugins_cup.html#Tourist">探索筆記解答</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="accordion col-lg-10 mx-auto pb-5 mt-3" id="accordionExample" data-aos="fade-up">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -144,12 +220,13 @@
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                             <div class="mx-auto text-center">
-                                <p class="mx-5">安裝插件版程式前，請先確認是否有安裝同作者同功能的獨立版程式，<a href="https://github.com/LeonBlade/DalamudPlugins">詳細請見此</a><br>
-                                確保在啟動器設置中打開“啟用遊戲內功能”以訪問遊戲內命令和功能！(可使用"/xlplugins"等指令)</p>
+                                <p class="mx-5">安裝插件版程式前，請先確認是否有安裝同作者同功能的獨立版程式，<a
+                                        href="https://github.com/LeonBlade/DalamudPlugins">詳細請見此</a><br>
+                                    確保在啟動器設置中打開“啟用遊戲內功能”以訪問遊戲內命令和功能！(可使用"/xlplugins"等指令)</p>
                                 <a href="image/moreplugins01.jpg" target="_blank"><img src="image/moreplugins01.jpg"
                                         class="img-fluid border rounded-3 mb-3" alt="" loading="lazy" width="700"></a>
                                 <p class="mx-5">到Dalamud設定介面的最後一個標籤頁，URL的地方貼上第三方程式庫的位址，按一下"+"<br>
-                                Enabled那欄會變成"√"</p>
+                                    Enabled那欄會變成"√"</p>
                                 <a href="image/moreplugins02.jpg" target="_blank"><img src="image/moreplugins02.jpg"
                                         class="img-fluid border rounded-3 mb-3" alt="" loading="lazy" width="700"></a>
                                 <p class="mx-5">回到插件管理頁面，會發現多了新增的插件，此時需要點擊安裝，即可使用。</p>
