--- a/plugins_map.html
+++ b/plugins_map.html
@@ -54,7 +54,11 @@
             <!-- 文章內容 -->
             <div class="col-md-8 col-lg-9 my-sm-5 px-5 imagebig">
                 <div class="commonFormat mt-5" id="ChatCoordinates">
-                    <h6 class="fs-4">ChatCoordinates</h6>
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">ChatCoordinates</h6>
+                        <a href="https://github.com/kissorjeyabalan/dalamud-chatcoordinates" class="btn btn-outline-secondary"
+                            role="button">插件原網址</a>
+                    </div>
                     <p>輸入座標後會自動在地圖立旗與聊天欄輸出座標
                         <br>
                         /coord x座標 y座標 [地圖名稱] 地圖名稱可省略
@@ -62,18 +66,30 @@
                     <img src="image/chatcoordinates.jpg" alt="" class="img-fluid imagebigback">
                 </div>
                 <div class="commonFormat mt-5" id="Globetrotter">
-                    <h6 class="fs-4">Globetrotter</h6>
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">Globetrotter</h6>
+                        <a href="https://git.annaclemens.io/ascclemens/Globetrotter" class="btn btn-outline-secondary"
+                            role="button">插件原網址</a>
+                    </div>
                     <p>藏寶圖打開後自動標示點位，可以設定點開寶圖或滑鼠滑過道具標示
                     </p>
                     <img src="image/xl setting 07.jpg" alt="" class="img-fluid imagebigback">
                 </div>
                 <div class="commonFormat mt-5" id="MapLinker">
-                    <h6 class="fs-4">MapLinker</h6>
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">MapLinker</h6>
+                        <a href="https://github.com/Bluefissure/MapLinker" class="btn btn-outline-secondary"
+                            role="button">插件原網址</a>
+                    </div>
                     <p>紀錄在聊天欄中的座標，可搭配<a href="#Teleporter">Teleporter</a>一起使用直接一鍵傳送最近的水晶</p>
                     <img src="image/xl setting 08.jpg" alt="" class="img-fluid imagebigback">
                 </div>
                 <div class="commonFormat mt-5" id="Teleporter">
-                    <h6 class="fs-4">Teleporter</h6>
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">Teleporter</h6>
+                        <a href="https://github.com/pohky/TeleporterPlugin" class="btn btn-outline-secondary"
+                            role="button">插件原網址</a>
+                    </div>
                     <p>輸入地圖名稱或水晶名稱可直接傳送，並且可自訂地圖別名(Alias)，輸入別名即可傳送<br>
                     上圖橫線下方兩個選項分別是使用各軍團傳送券與婚禮戒指</p>
                 </div>
