--- a/plugins_song.html
+++ b/plugins_song.html
@@ -56,8 +56,7 @@
                 <div class="commonFormat mt-5" id="simpleTweaks">
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">Simple Tweaks</h6>
-                        <a href="https://github.com/Caraxi/SimpleTweaksPlugin" class="btn btn-outline-secondary"
-                            role="button">插件原網址</a>
+                        <a href="https://github.com/Caraxi/SimpleTweaksPlugin" class="btn btn-outline-secondary" target="_blank" role="button">插件原網址</a>
                     </div>
                     <p>便利小插件合集，<a href="https://github.com/Caraxi/SimpleTweaksPlugin">部分使用說明(插件網址)</a>，幾個個人認為比較實用的</p>
                     <ul>
@@ -107,7 +106,7 @@
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">ezFauxHollows</h6>
                         <a href="https://github.com/daemitus/FauxHollowsSolver" class="btn btn-outline-secondary"
-                            role="button">插件原網址</a>
+                        target="_blank" role="button">插件原網址</a>
                     </div>
                     <p>幻想盤翻牌子提示</p>
                     <img src="https://github.com/daemitus/FauxHollowsSolver/raw/master/res/demo.png" alt=""
@@ -117,7 +116,7 @@
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">ezMiniCactpot</h6>
                         <a href="https://github.com/daemitus/MiniCactpotSolver" class="btn btn-outline-secondary"
-                            role="button">插件原網址</a>
+                        target="_blank" role="button">插件原網址</a>
                     </div>
                     <p>金蝶刮刮樂明牌，但還是要看運氣，人雖起來連個789都沒有</p>
                     <div class="row">
@@ -131,7 +130,7 @@
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">ezWondrousTails</h6>
                         <a href="https://github.com/daemitus/WondrousTailsSolver" class="btn btn-outline-secondary"
-                            role="button">插件原網址</a>
+                        target="_blank" role="button">插件原網址</a>
                     </div>
                     <p>空想帳機率提示</p>
                     <img src="https://github.com/daemitus/WondrousTailsSolver/raw/master/res/demo.png" alt=""
@@ -142,7 +141,7 @@
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">Market Board plugin</h6>
                         <a href="https://github.com/fmauNeko/MarketBoardPlugin" class="btn btn-outline-secondary"
-                            role="button">插件原網址</a>
+                        target="_blank" role="button">插件原網址</a>
                     </div>
                     <p>查詢物品價格，但需要玩家有打開板子更新價格，準確度取決於伺服器使用Dalamud的人數<br>
                         "/pmb"打開查價介面，滑鼠移到物品上即可查詢價格</p>
@@ -152,7 +151,7 @@
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">Housemate</h6>
                         <a href="https://github.com/lmcintyre/Housemate" class="btn btn-outline-secondary"
-                            role="button">插件原網址</a>
+                        target="_blank" role="button">插件原網址</a>
                     </div>
                     <p>顯示室內外裝修道具的名字</p>
                     <a href="image/xl setting 12.png" target="_blank">
@@ -162,7 +161,7 @@
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">BDTHPlugin</h6>
                         <a href="https://github.com/LeonBlade/DalamudPlugins" class="btn btn-outline-secondary"
-                            role="button">插件原網址</a>
+                        target="_blank" role="button">插件原網址</a>
                     </div>
                     <p>自訂家具位置，此插件需從第三方插件庫加載，詳細請見<a href="index.html#headingThree" target="_blank"
                             class="moreplugin">安裝方法</a>
