--- a/plugins_ui.html
+++ b/plugins_ui.html
@@ -60,7 +60,7 @@
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">Chat Bubbles</h6>
                         <a href="https://github.com/Haplo064/ChatBubbles" class="btn btn-outline-secondary"
-                            role="button">插件原網址</a>
+                        target="_blank" role="button">插件原網址</a>
                     </div>
                     <p>顯示玩家說話時頭頂的泡泡，也可用於RP店分辨誰在說話，設定可隱藏自己的泡泡跟決定顯示的方式</p>
                     <img src="https://github.com/Haplo064/ChatBubbles/blob/main/ChatBubbles/images/image1.png?raw=true"
@@ -70,7 +70,7 @@
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">Visibility</h6>
                         <a href="https://github.com/SheepGoMeh/VisibilityPlugin" class="btn btn-outline-secondary"
-                            role="button">插件原網址</a>
+                        target="_blank" role="button">插件原網址</a>
                     </div>
                     <p>取消顯示其他玩家、寵物、召喚獸或路型鳥(有中文介面)<br>
                     "/pvis"呼叫設定介面</p>
@@ -80,7 +80,7 @@
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">Glamaholic</h6>
                         <a href="https://git.annaclemens.io/ascclemens/Glamaholic" class="btn btn-outline-secondary"
-                            role="button">插件原網址</a>
+                        target="_blank" role="button">插件原網址</a>
                     </div>
                     <p>解放投影模板數量限制</p>
                 </div>
@@ -88,10 +88,118 @@
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">GoodMemory</h6>
                         <a href="https://git.annaclemens.io/ascclemens/GoodMemory" class="btn btn-outline-secondary"
-                            role="button">插件原網址</a>
+                        target="_blank" role="button">插件原網址</a>
                     </div>
                     <p>在物品底部區域標註是否已解鎖，只會出現在如樂譜、寵物等可以解鎖物品中。</p>
                     <img src="image/xl setting 04.jpg" alt="" class="img-fluid imagebigback">
+                </div>
+                <div class="commonFormat mt-5" id="qolbar">
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">QoL bar</h6>
+                        <a href="https://github.com/UnknownX7/QoLBar" class="btn btn-outline-secondary"
+                        target="_blank" role="button">插件原網址</a>
+                    </div>
+                    <p>擴充你的快捷欄，自訂樣式可收合，任何可以做成巨集的功能都可以放進這個自訂窗口內<br>
+                    會日文的也可以參考<a href="https://toramemoblog.com/xivlauncher-qolbar" target="_blank">這篇的教學</a></p>
+                    <div class="alert alert-danger py-2" role="alert">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                            class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img"
+                            aria-label="Warning:">
+                            <path
+                                d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+                        </svg>
+                        若有安裝畫面濾鏡建議先關閉濾鏡顯示，否則跨螢幕時容易閃退
+                    </div>
+                    <img src="image/qolbar.jpg" alt="" class="img-fluid imagebigback">
+                    <p>不只可以放表情，可以放文字、切換職業、喊話巨集等各種發揮創意玩法(?)<br>
+                    <a href="https://discord.gg/3NMcUV5" target="_blank"><i class="bi bi-discord"></i> 羊圈DC</a>會有很多人分享他們的QoLbar</p>
+                    <img src="image/qolbar02.jpg" alt=""      class="img-fluid imagebigback">
+                    <p class="fs-5 text-muted fw-bold mt-3">快捷欄通用設定</p>
+                    <div class="row">
+                        <div class="col-md-6 text-center">
+                            <a href="image/qol01.jpg" target="_blank">
+                                <img src="image/qol01.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
+                        </div>
+                        <div class="col-md-6 text-center">
+                            <a href="image/qol02.jpg" target="_blank">
+                                <img src="image/qol02.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
+                        </div>
+                    </div>
+                    <p>會修改到的設定應該只有這些，如果需要更改數字欄位，可以滑鼠按住往左右拖曳。<br>
+                    ▶第一張的"O"可以打開快捷欄設定<br>
+                    ▶"H"可切換隱藏"R"顯示<br>
+                    ▶編輯完畢後把Edit Mode取消勾選，就不會看到上方的＋號框框了<br>
+                    ▶若勾選點擊互動（應該是點擊透過才對），則快捷欄無法使用下拉選單、無法互動<br>
+                    點選導入會導入剪貼簿的代碼，所以點擊導入之前先複製需要導入的代碼到剪貼簿。</p>
+                    <p class="fs-5 text-muted fw-bold mt-3">Shortcut設定</p>
+                    <img src="image/qol03.jpg" alt=""      class="img-fluid imagebigback">
+                    <p>▶Name－"::"後面的數字是icon編號，點右下角放大鏡可以打開icon資源庫，後面加"##"(顯示的名稱)滑鼠移入可顯示提示<br>
+                    ▶Mode－Command類似寫巨集的地方，可以寫指令，右鍵可以添加遊戲內特殊符號<br>
+                    另外可以使用"//m巨集的編號"來快捷使用巨集，如果要使用角色共享巨集，需要+100，例如要使用共享MACRO#0，則需要輸入"//m100"<br>
+                    ▶旁邊兩個頁籤－Category是下拉選單才有的設定，可以調整選單寬度、一行幾個、大小間距，下面的選項Hover=滑鼠移入時，可以設定點選打開或滑入打開/關閉，跟不要背景；Icon就是外觀微調</p>
+                    <p class="fs-5 text-muted fw-bold mt-3">巨集指令</p>
+                    <table class="table table-hover">
+                        <thead>
+                            <tr>
+                              <th scope="col">#</th>
+                              <th scope="col">指令</th>
+                              <th scope="col">行為</th>
+                              <th scope="col">範例</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <tr>
+                              <th scope="row">1</th>
+                              <td>/gearset change</td>
+                              <td>切換職業</td>
+                              <td>/gearset change (裝備數字or職業名稱)<br>
+                                /gearset change 占星術師
+                              </td>
+                            </tr>
+                            <tr>
+                              <th scope="row">2</th>
+                              <td>/lookout</td>
+                              <td>表情指令</td>
+                              <td>每個表情指令不一樣，打開EMOTES可以查看</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">3</th>
+                                <td>//i (物品名稱)</td>
+                                <td>使用物品</td>
+                                <td>//i エターナルリング<br>婚戒傳送</td>
+                              </tr>
+                            <tr>
+                              <th scope="row">4</th>
+                              <td>導入代碼</td>
+                              <td>攻略マクロ集</td>
+                              <td><a href="https://discord.com/channels/581875019861328007/795684290750971945/945816185839165451" target="_blank">DC連結(需加入羊圈)</a></td>
+                            </tr>
+                            <tr>
+                                <th scope="row">5</th>
+                                <td>導入代碼</td>
+                                <td>切換職業</td>
+                                <td><a href="https://discord.com/channels/581875019861328007/795684290750971945/945811447429079040" target="_blank">DC連結(需加入羊圈)</a></td>
+                            </tr>
+                            <tr>
+                                <th scope="row">6</th>
+                                <td>導入代碼</td>
+                                <td>挖寶按紐(須配合Globetrotter)</td>
+                                <td><a href="https://discord.com/channels/581875019861328007/795684290750971945/944935728134111302" target="_blank">DC連結(需加入羊圈)</a></td>
+                            </tr>
+                            <tr>
+                                <th scope="row">7</th>
+                                <td>導入代碼</td>
+                                <td>標點視窗(標記需要手動更改指令)</td>
+                                <td><a href="https://discord.com/channels/581875019861328007/795684290750971945/935625087690879036" target="_blank">DC連結(需加入羊圈)</a></td>
+                            </tr>
+                            <tr>
+                                <th scope="row">8</th>
+                                <td>導入代碼</td>
+                                <td>傳送按紐(須配合Teleporter)</td>
+                                <td><a href="https://discord.com/channels/581875019861328007/795684290750971945/931764325281062952" target="_blank">DC連結(需加入羊圈)</a></td>
+                            </tr>
+                          </tbody>
+                    </table>
                 </div>
             </div>
         </div>
