--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                         <li class="list-group-item"><a href="plugins_ui.html#Visibility">隱藏其他玩家</a></li>
                         <li class="list-group-item"><a href="plugins_ui.html#Glamaholic">解放投影模板</a></li>
                         <li class="list-group-item"><a href="plugins_ui.html#GoodMemory">物品解鎖備註</a></li>
+                        <li class="list-group-item"><a href="plugins_ui.html#qolbar">解放快捷欄</a></li>
                     </ul>
                 </div>
 
@@ -161,7 +162,7 @@
                 </div>
             </div>
 
-            <div class="accordion col-lg-10 mx-auto pb-5 mt-3" id="accordionExample" data-aos="fade-up">
+            <div class="accordion accordion-flush col-lg-10 mx-auto pb-5 mt-3" id="accordionExample" data-aos="fade-up" data-aos-delay="-100">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
