修改top鈕、增加日常提醒

--- a/index.html
+++ b/index.html
@@ -158,11 +158,12 @@
                         <li class="list-group-item"><a href="plugins_cup.html#sonar">找S/A怪</a></li>
                         <li class="list-group-item"><a href="plugins_cup.html#TriadBuddy">幻卡小抄</a></li>
                         <li class="list-group-item"><a href="plugins_cup.html#Tourist">探索筆記解答</a></li>
+                        <li class="list-group-item"><a href="plugins_cup.html#DailyDuty">日常任務提醒</a></li>
                     </ul>
                 </div>
             </div>
 
-            <div class="accordion accordion-flush col-lg-10 mx-auto pb-5 mt-3" id="accordionExample" data-aos="fade-up" data-aos-delay="-100">
+            <div class="accordion accordion-flush col-lg-10 mx-auto pb-5 mt-3" id="accordionExample" data-aos="fade-up" data-aos-offset="50">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
