--- a/plugins_cup.html
+++ b/plugins_cup.html
@@ -46,6 +46,7 @@
 <body>
     <!-- header -->
     <script src="head.js"></script>
+
     <!-- 內容 -->
     <div class="container-fluid plugin">
         <div class="row justify-content-end">
@@ -93,6 +94,15 @@
                             role="button">插件原網址</a>
                     </div>
                     <p>探索筆記解答+插旗</p>
+                </div>
+                <div class="commonFormat mt-5" id="DailyDuty">
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">DailyDuty</h6>
+                        <a href="https://github.com/MidoriKami/DailyDuty" class="btn btn-outline-secondary"
+                            role="button">插件原網址</a>
+                    </div>
+                    <p>日常任務提醒小助手(待更新)</p>
+                    <img src="https://user-images.githubusercontent.com/9083275/154887762-1ee6eea4-c292-422c-af42-5dfa144e5744.png" alt="" class="img-fluid imagebigback">
                 </div>
             </div>
         </div>
