--- a/plugins_cup.html
+++ b/plugins_cup.html
@@ -101,8 +101,25 @@
                         <a href="https://github.com/MidoriKami/DailyDuty" class="btn btn-outline-secondary"
                             role="button">插件原網址</a>
                     </div>
-                    <p>日常任務提醒小助手(待更新)</p>
+                    <p>日常任務提醒小助手</p>
                     <img src="https://user-images.githubusercontent.com/9083275/154887762-1ee6eea4-c292-422c-af42-5dfa144e5744.png" alt="" class="img-fluid imagebigback">
+                    <p class="mt-3">目前有的分類</p>
+                    <div class="row">
+                        <div class="col-md-6 text-center">
+                            <a href="image/daily01.jpg" target="_blank">
+                                <img src="image/daily01.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
+                        </div>
+                        <div class="col-md-6 text-center">
+                            <a href="image/daily02.jpg" target="_blank">
+                                <img src="image/daily02.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
+                        </div>
+                    </div>
+                    <img src="image/daily03.jpg" alt="" class="img-fluid imagebigback">
+                    <p>設定打開後每一個都可以自訂登入提示在聊天欄/換區域聊天欄提醒</p>
+                    <img src="image/daily04.jpg" alt="" class="img-fluid imagebigback">
+                    <p>隨機任務列表</p>
+                    <img src="image/daily05.jpg" alt="" class="img-fluid imagebigback">
+                    <p>小窗設定</p>
                 </div>
             </div>
         </div>
